objects/pepCmsQuestion__c.object
<CustomObject>
    <fields>
        <fullName>Is_Date_to_Birth__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Date to Birth</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Production_RowId__c</fullName>
        <description>Used when migrating records from Production to Sandboxes. Will be blank in Production, but when inserting these records into Sandbox we insert the Id from Prd into this field. This is our logical key for setting this Record in Lookups in other objects.</description>
        <externalId>true</externalId>
        <label>Production_RowId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pepCMSAnswer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CMS Answer</label>
        <referenceTo>pepCmsAnswer__c</referenceTo>
        <relationshipLabel>Question</relationshipLabel>
        <relationshipName>pepCmsQuestion</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pepDisplayDollar__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Display $</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pepDisplayPercent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Display %</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pepFieldApiName__c</fullName>
        <label>Field API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pepGenericErrorMessage__c</fullName>
        <label>Generic Error Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>pepGoogleApi__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Google Api</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pepHasAnswers__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has dependent Questions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pepIsRequired__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pepKeyPressNumbersOnly__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Key Press Numbers Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pepLabelAfterQuestion__c</fullName>
        <label>Label (After Question)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pepLabelPriorQuestion__c</fullName>
        <description>The text that will be displayed just before the question is rendered.</description>
        <label>Label (Prior Question)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pepLabel_After_Question_New__c</fullName>
        <label>Label(After Question) New</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>pepNumbersOnly__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Numbers Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pepPage__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CMS Page</label>
        <referenceTo>pepCmsPage__c</referenceTo>
        <relationshipLabel>Question</relationshipLabel>
        <relationshipName>Question</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pepQuestion__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Question</label>
        <referenceTo>pepCmsQuestion__c</referenceTo>
        <relationshipName>CmsQuestion</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pepRecordSequence__c</fullName>
        <label>Record Sequence</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pepRelatedCSS__c</fullName>
        <label>Related CSS</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pepSObjectApiName__c</fullName>
        <label>SObject API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pepSection__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CMS Section</label>
        <referenceTo>pepCmsSection__c</referenceTo>
        <relationshipLabel>Questions</relationshipLabel>
        <relationshipName>pepQuestion</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pepSequence__c</fullName>
        <label>Sequence</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pepSubType__c</fullName>
        <label>Sub Type</label>
        <picklist>
            <controllingField>pepType__c</controllingField>
            <picklistValues>
                <fullName>Yes / No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>+ / -</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>pepType__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Date</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Picklist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Checkbox</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Radio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Button</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Text</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Number</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Currency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Percent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Text area</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HomePhone</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>pepValidEmail__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Valid Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pepis_Consolidated_Debt__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Consolidated Debt</label>
        <type>Checkbox</type>
    </fields>
    <label>CMS Question</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Question ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Question</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>